Zadania 5 i 7 w czaesci